add module-3 lesson-2

--- a/lesson-2/index.html
+++ b/lesson-2/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <audio class="audio" controls style="display: none;">
+        <source src="./assets/nta3mde5ntg0nta3mtew_n4ltgrxccn4.mp3" type="audio/mpeg">
+    </audio>
     <script src="./js/index.js"></script>
 </body>
 </html>
